# wumbo

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  add.lua  add.lua~RF32cda58e.TMP  ast.natvis  box.natvis  flake.nix  index.html  index.mjs  justfile  out.wasm  out.wat  package.json  shell.nix  test.lua  vcpkg.json  wumbo
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark.mjs  fengari_bench.mjs  index.html  index.mjs  init.lua  lua_bench.mjs  main.c  wumbo_bench.mjs
benchmark/algo/: fixpoint-fact.lua  heapsort.lua
example/: index.mjs  init.lua  wumbo
explorer/: index.html  index.mjs  wumbo.mjs
js/: index.css  index.html  index.mjs  load.mjs  post.mjs  test.mjs  wumbo.mjs  wumbo.wasm
presets/: common.json  flags.json  platforms.json  tools.json
source/: action.hpp  ast.hpp  box.hpp  jsapi.cpp  lua2wasm.cpp  lua2wasm.hpp  main.cpp  parser.cpp  parser.hpp  util.hpp  wasm (2).cpp  wasm (2).hpp  wasm.cpp  wasm.hpp  wasm_util.hpp
source/ast/: analyze.hpp  ast.hpp  func_stack.hpp  printer.hpp
source/backend/: assignment_call.cpp  basic_lib.cpp  compiler.hpp  func_stack.hpp  locals.cpp  loop.cpp  operators.cpp  table.cpp  wasm.cpp  wasm.hpp  wasm_util.hpp
source/backend/runtime/: operator.cpp  runtime.cpp  runtime.hpp  table.cpp
source/backend/runtime/libs/: basic.cpp  coroutine.cpp  debug.cpp  io.cpp  math.cpp  os.cpp  package.cpp  string.cpp  table.cpp  utf8.cpp
source/frontend/: action.hpp  parser.cpp  parser.hpp
source/lua2wasm/: assignment_call.cpp  basic_lib.cpp  compiler.hpp  expression.cpp  locals.cpp  loop.cpp  operators.cpp  runtime.cpp  runtime.hpp  table.cpp
source/lua2wasm/runtime/: operator.cpp  runtime.cpp  runtime.hpp
source/utils/: type.hpp  util.hpp
test/: CMakeLists.txt  break.lua  calc.lua  concat.lua  controlflow.lua  fibonacci.lua  for_loop.lua  func_call.lua  functions_advanced.lua  generic_for.lua  goto.lua  index.mjs  integer_float.lua  metatables.lua  multiple_assign.lua  oop.lua  operators.lua  pcall_error.lua  scope.lua  string_values.lua  table.lua  type_coercion.lua  upvalues.lua
test/lib/: basic.lua  coroutines.lua  math.lua  string.lua  table.lua
